Alle teksten zijn nu I18N.
git-svn-id: http://intra.debooy.eu/svn/CaissaTools/trunk@315 b6724bcf-16b7-40a7-9fa5-013ba81ffa6e